<resources>
    <string name="back">返回</string>
    <string name="account">account</string>
    <string name="token">token</string>
    <string name="nav_home">首页</string>
    <string name="nav_my">我的</string>
    <string name="setting">设置</string>
    <string name="login">登录</string>
    <string name="group_list">群列表</string>
    <string name="member_list">群成员</string>
    <string name="setting_key">设置 appKey</string>
    <string name="app_key">appKey</string>
    <string name="finish">完成</string>
    <string name="app_key_hint">请输入appKey</string>
    <string name="digits_key">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="quit">退出</string>
    <string name="quit_title">请选择退出方式</string>
    <string name="exit_app">退出软件</string>
    <string name="logout">退出登录</string>
    <string name="new_friend">新的朋友</string>
    <string name="team_chat">群聊</string>
    <string name="friend_list">好友列表</string>
    <string name="scanning_user">扫描用户</string>
    <string name="batch_exe">批量操作</string>
    <string name="add">添加</string>
    <string name="search">搜索</string>
    <string name="edit">编辑</string>
    <string name="enter">进入</string>
    <string name="dictionary_prefix">字典前缀</string>
    <string name="dictionary_scope">字典范围</string>
    <string name="about">关于软件</string>
    <string name="dictionary_filter">过滤词</string>
    <string name="add_friend_describe">验证描述</string>
    <string name="switch_account">切换账号</string>
    <string name="remove">移除</string>
    <string name="add_data">添加数据</string>
    <string name="save">保存</string>
    <string name="start">开始</string>
    <string name="fast_add_friend">一键加好友</string>
    <string name="avatar">头像</string>
    <string name="setting_login">登录设置</string>
    <string name="operation_delay">操作延时</string>
    <string name="add_direct">直接添加</string>
    <string name="account_hint">请输入account</string>
    <string name="token_hint">请输入token</string>
    <string name="local_account">本地账号</string>
    <string name="refresh">刷新</string>
    <string name="database">数据库</string>
    <string name="import_or_export">导入或导出</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="friend">好友</string>
    <string name="team_chat_limit">群聊上限</string>
    <string name="more">更多</string>
    <string name="retry">重试</string>
    <string name="auto_fill">自动补位</string>
    <string name="team_chat_describe">邀请描述</string>
    <string name="select_action">请选择操作</string>
    <string name="create_team">创建群聊</string>
    <string name="team_name">群聊名称</string>
    <string name="team_icon">群头像</string>
    <string name="be_invite_mode">直接邀请进群</string>
    <string name="invite_mode">邀请新成员</string>
    <string name="introduce">群简介</string>
    <string name="team_update_mode">修改群聊资料</string>
    <string name="team_sum">创建数量</string>
    <string name="announcement">群公告</string>
    <string name="all_mute">全员禁言</string>
    <string name="verify_type">验证模式</string>
    <string name="team_member">群成员</string>
    <string name="key_words_hint">请输入关键词</string>
    <string name="client_type">登录模式</string>
    <string name="statement">使用声明</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
    <string name="copy">复制</string>
    <string name="go_now">马上前往</string>
    <string name="know">知道了</string>
    <string name="not_again_hint">不再提示</string>
    <string name="black_list">黑名单</string>
    <string name="delete_friend">删除好友</string>
    <string name="add_friend">添加好友</string>
    <string name="account_info">账号信息</string>
    <string name="url">URL</string>
    <string name="param">参数</string>
    <string name="result">结果</string>
    <string name="fail">失败</string>
    <string name="success">成功</string>
    <string name="heard">请求头</string>
</resources>