<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_white"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/logout"
        android:textColor="@color/title_color"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tvQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_white"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/exit_app"
        android:textColor="@color/title_color"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/background" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_white"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/cancel"
        android:textColor="@color/title_color"
        android:textSize="16sp" />
</LinearLayout>