<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/back"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:src="@drawable/ic_back"
        android:tint="@color/icon_tint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_key"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <View
        android:id="@+id/vTop"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/line_color"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/finish"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/item_bg_white_default"
        app:layout_constraintBottom_toBottomOf="@id/tvAppKey"
        app:layout_constraintTop_toTopOf="@id/tvAppKey" />

    <TextView
        android:id="@+id/tvAppKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/app_key"
        android:textColor="@color/title_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vTop" />

    <View
        android:id="@+id/vLine"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/line_color"
        app:layout_constraintBottom_toBottomOf="@id/tvAppKey"
        app:layout_constraintStart_toEndOf="@id/tvAppKey"
        app:layout_constraintTop_toTopOf="@id/tvAppKey" />

    <EditText
        android:id="@+id/editAppKey"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:background="@null"
        android:hint="@string/app_key_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tvAppKey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vLine"
        app:layout_constraintTop_toTopOf="@id/tvAppKey" />

</androidx.constraintlayout.widget.ConstraintLayout>