<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/title_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/login" />


    <TextView
        android:id="@+id/tvAppKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_white"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/title_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatus"
        tools:text="@string/setting_key" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/enter"
        android:src="@drawable/ic_right"
        android:tint="@color/icon_click"
        app:layout_constraintBottom_toBottomOf="@id/tvAppKey"
        app:layout_constraintEnd_toEndOf="@id/tvAppKey"
        app:layout_constraintTop_toTopOf="@id/tvAppKey"
        tools:ignore="UseAppTint" />

    <View
        android:id="@+id/vLineKey"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        app:layout_constraintTop_toBottomOf="@id/tvAppKey" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_item_white"
        app:layout_constraintBottom_toBottomOf="@id/editToken"
        app:layout_constraintTop_toBottomOf="@id/vLineKey" />

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/account"
        android:textColor="@color/title_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLineKey" />

    <EditText
        android:id="@+id/editAccount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="username"
        android:background="@null"
        android:hint="@string/account"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tvAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvAccount"
        app:layout_constraintTop_toTopOf="@id/tvAccount" />

    <View
        android:id="@+id/vLineAccount"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/editAccount"
        app:layout_constraintTop_toBottomOf="@id/tvAccount" />

    <TextView
        android:id="@+id/tvToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/token"
        android:textColor="@color/title_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLineAccount" />

    <EditText
        android:id="@+id/editToken"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="@null"
        android:digits="@string/digits_key"
        android:hint="@string/token"
        android:imeOptions="actionGo"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/tvToken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/editAccount"
        app:layout_constraintTop_toTopOf="@id/tvToken" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_button_pink"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/login"
        android:textColor="@color/button_bg_pink_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvToken" />

</androidx.constraintlayout.widget.ConstraintLayout>