<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/back"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        android:tint="@color/icon_click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack"
        tools:text="(10/100)" />

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit"
        android:padding="16dp"
        android:src="@drawable/ic_edit"
        android:tint="@color/icon_click"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toStartOf="@id/ivStart"
        app:layout_constraintTop_toTopOf="@id/ivBack"
        tools:ignore="UseAppTint" />

    <ImageView
        android:id="@+id/ivStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit"
        android:padding="16dp"
        android:src="@drawable/ic_start"
        android:tint="@color/icon_click"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBack"
        tools:ignore="UseAppTint" />

    <EditText
        android:id="@+id/editAccount"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edit_bg_search"
        android:digits="@string/digits_key"
        android:elevation="1dp"
        android:hint="@string/account"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="4dp"
        android:textColor="@color/title_color"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <View
        android:id="@+id/vTop"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@color/line_color"
        app:layout_constraintTop_toBottomOf="@id/editAccount" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vTop">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ryContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>